:rocket: autlizacao de textos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>SAM - Overview</title>
+	<title>Api com Serverless - Overview</title>
 
 	<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 	<meta name="author" content="Hakim El Hattab">
@@ -42,17 +42,17 @@
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
 			<section>
-				<h3>SAM - Overview</h3>
+				<h3>Api com Serverles</h3>
 				<img data-src="img/sam.png">
-				<h4>Bora falar de SAM?</h4>
+				<h4>HandsON</h4>
 				<p>
 					<small>Palestrante: <a href="http://rogeriofontes.inf.br" target="_blank">Rogério Fontes</a> / <a
 							href="http://twitter.com/rogeriofontes" target="_blank">@rogeriofontes</a>
 						<br /><br />
-						Livre tradução do artigo: <a href="https://anto.online/code/aws-sam-introductory-tutorial/"
-						target="_blank">https://anto.online/code/aws-sam-introductory-tutorial/</a>
+						<!--Livre tradução do artigo: <a href="https://anto.online/code/aws-sam-introductory-tutorial/"
+							target="_blank">https://anto.online/code/aws-sam-introductory-tutorial/</a>-->
 					</small>
-	
+
 				</p>
 
 			</section>
@@ -73,6 +73,143 @@
 				<a href="http://www.triangulohackerspace.net.br/" target="_blank"><img data-src="img/ths.png"></a>
 			</section>
 
+			<section>
+				<h5>AWS User Group Triangulo Mineiro</h5>
+				<p><span style="font-size:24px">
+					<a href="https://www.meetup.com/pt-BR/aws-user-group-triangulo-mineiro/" target="_blank">https://www.meetup.com/pt-BR/aws-user-group-triangulo-mineiro/</a>
+					</span></p>
+				<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+			</section>
+
+			<section>
+				<h5>Quais são as vantagens da computação sem servidor?</h5>
+				<p><span style="font-size:24px">
+						A computação sem servidor permite que os desenvolvedores criem aplicativos sem a dor de cabeça
+						de gerenciar a infraestrutura. <br/>Mais especialmente, permite que eles escrevam em código sem
+						servidor sem precisar:
+						<ul span style="font-size:24px">
+							<li>Provisionar um servidor</li>
+							<li>Garanta sua funcionalidade</li>
+							<li>Criar ambientes de teste em um servidor</li>
+							<li>Manter o tempo de atividade do servidor</li>
+						</ul>
+					</span></p>
+				<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+			</section>
+
+			<section>
+				<h5>Realmente sem Servidor?</h5>
+				<p><span style="font-size:24px">
+						Não quer dizer que não existe um servidor, mas que não preocupamos em configurar esses
+						servidores. Ou seja, só preocupamos com nosso código.
+					</span></p>
+				<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+			</section>
+
+			<section>
+				<h5>Benefícios:</h5>
+				<p><span style="font-size:24px">
+						<ul style="font-size:24px">
+							<li><b>Custos mais baixos</b> - A computação sem servidor geralmente é muito econômica, pois os
+								provedores tradicionais de serviços de back-end em nuvem (alocação de servidor)
+								geralmente fazem com que o usuário pague por espaço não utilizado ou tempo de CPU
+								ocioso.</li>
+							<li><b>Escalabilidade simplificada</b> - Os desenvolvedores que usam arquitetura sem servidor não
+								precisam se preocupar com políticas para escalar seu código. O fornecedor sem servidor
+								lida com todo o dimensionamento sob demanda.</li>
+							<li><b>Código de back-end simplificado</b> - Com o FaaS, os desenvolvedores podem criar funções
+								simples que executam de forma independente uma única finalidade, como fazer uma chamada
+								de API.</li>
+							<li><b>Resposta mais rápida</b> - A arquitetura sem servidor pode reduzir significativamente o
+								tempo de lançamento no mercado. Em vez de precisar de um processo de implantação
+								complicado para lançar correções de bugs e novos recursos, os desenvolvedores podem
+								adicionar e modificar o código aos poucos.</li>
+						</ul>
+					</span></p>
+				<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+			</section>
+			
+			<section>
+				<section>
+					<h5>Functions-as-a-Service (FaaS) <br /> (serverless function)</h5>
+					<p><span style="font-size:24px">
+							Uma função serverless é uma função programática escrita por um desenvolvedor de software
+							para um único propósito. Em seguida, é hospedado e mantido em infraestrutura por empresas de
+							computação em nuvem. Essas empresas cuidam da manutenção e execução do código para que os
+							desenvolvedores possam implantar novos códigos com mais rapidez e facilidade.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+				<section>
+					<h5>Back-end como serviço (BaaS)</h5>
+					<p><span style="font-size:24px">
+							Permite que os desenvolvedores terceirizam a administração das funções de back-end.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+				<section>
+					<h5>Plataforma como serviço (PaaS)</h5>
+					<p><span style="font-size:24px">
+							Permite desenvolver e implantar produtos no ambiente de nuvem.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+				<section>
+					<h5>Infraestrutura como serviço (IaaS)</h5>
+					<p><span style="font-size:24px">
+							Permite desenvolver e implantar produtos no ambiente de nuvem.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h5>Então vamos utilizar um dynamodb, uma funcao lambda e uma ApiGateway</h5>
+					<p><span style="font-size:24px">
+						mas antes..
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+				<section>
+					<h5>Gateway de API</h5>
+					<p><span style="font-size:24px">
+						Um serviço totalmente gerenciado que faz com que os desenvolvedores criem, publiquem, mantenham, monitorem e protejam APIs facilmente em qualquer escala. O API Gateway pode ser usado para criar APIs Restful e APIs WebSocket que possuem aplicativos de comunicação bidirecional em tempo real. É uma porta de entrada para aplicativos acessarem dados, lógica de negócios ou funcionalidade de seus serviços de back-end.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+				<section>
+					<h5>AWS Lambda</h5>
+					<p><span style="font-size:24px">
+						Um serviço de computação sem servidor que executa código como resposta a eventos e cuida automaticamente dos recursos inferiores. Ele executa código em infraestrutura de computação de alta disponibilidade e realiza toda a administração dos recursos de computação. Alguns exemplos são solicitações HTTP via Amazon API Gateway, alterações em objetos no S3 e muitos outros.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+				<section>
+					<h5>DynamoDB</h5>
+					<p><span style="font-size:24px">
+						Um banco de dados do Amazon AWS Web Services que é totalmente gerenciado, sem servidor, banco de dados NoSQL de valor-chave, possui aplicativos de alto desempenho em qualquer escala. Possui os seguintes benefícios, como segurança integrada, backups contínuos, replicação multirregional automatizada, armazenamento em cache na memória e ferramentas de exportação de dados.
+						</span></p>
+					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
+				</section>
+			</section>
+
+			<section>
+				<h5>Temos uma missão?</h5>
+				<p><span style="font-size:24px">
+					Temos uma demanda de criar um aplicativo para cadastro de endereços:
+					</span></p>
+				<img data-src="img/apigw-lambda-dynamodb.png" width="800" height="300">
+			</section>
+
+			<section>
+				<h5>Exemplo:</h5>
+				<p><span style="font-size:24px">
+					Vamos seguir esse exemplo:
+					</span></p>
+					<a href="https://catalog.us-east-1.prod.workshops.aws/workshops/2c8321cb-812c-45a9-927d-206eea3a500f/en-US" target="_blank">Workshop</a>
+			</section>
+			
 			<section>
 				<h5>O que é AWS CloudFormation?</h5>
 				<p><span style="font-size:24px">
@@ -540,6 +677,15 @@ Outputs:
 			</section>
 
 
+			<section>
+				<h5>Demo:</h5>
+				<p><span style="font-size:24px">
+					Vamos seguir a demo:
+					</span></p>
+					<img data-src="img/demo.jpg" width="250" header="100" /><br />
+					<a href="https://github.com/rogeriofontes/handson-apigw-lambda-dynamodb" target="_blank">Link</a>
+			</section>
+
 			<!--section>
 				<img data-src="img/tobecontinued.jfif" width="250" header="200">
 			</section-->
@@ -562,6 +708,12 @@ Outputs:
 					<a
 						href="https://anto.online/code/aws-sam-introductory-tutorial/">https://anto.online/code/aws-sam-introductory-tutorial/</a>
 				</span>
+				https://dashbird.io/blog/business-benefits-of-serverless/
+				https://sst.dev/chapters/pt/what-is-serverless.html
+				https://docs.aws.amazon.com/pt_br/apigateway/latest/developerguide/http-api-dynamo-db.html
+				https://faun.pub/build-a-rest-api-with-api-gateway-aws-lambda-dynamodb-aws-cdk-616d1e17c128
+				https://cloudonaut.io/create-a-serverless-restful-api-with-api-gateway-cloudformation-lambda-and-dynamodb/
+				https://dev.classmethod.jp/articles/creating-an-shop-api-of-get-items-with-dynamodb-lambda-and-api-gateway-using-aws/
 			</section>
 		</div>
 
