--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 			<section>
 				<h5>AWS User Group Triangulo Mineiro</h5>
 				<p><span style="font-size:24px">
-					<a href="https://www.meetup.com/pt-BR/aws-user-group-triangulo-mineiro/" target="_blank">https://www.meetup.com/pt-BR/aws-user-group-triangulo-mineiro/</a>
+						<a href="https://www.meetup.com/pt-BR/aws-user-group-triangulo-mineiro/"
+							target="_blank">https://www.meetup.com/pt-BR/aws-user-group-triangulo-mineiro/</a>
 					</span></p>
 				<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
 			</section>
@@ -85,7 +86,7 @@
 				<h5>Quais são as vantagens da computação sem servidor?</h5>
 				<p><span style="font-size:24px">
 						A computação sem servidor permite que os desenvolvedores criem aplicativos sem a dor de cabeça
-						de gerenciar a infraestrutura. <br/>Mais especialmente, permite que eles escrevam em código sem
+						de gerenciar a infraestrutura. <br />Mais especialmente, permite que eles escrevam em código sem
 						servidor sem precisar:
 						<ul span style="font-size:24px">
 							<li>Provisionar um servidor</li>
@@ -110,17 +111,21 @@
 				<h5>Benefícios:</h5>
 				<p><span style="font-size:24px">
 						<ul style="font-size:24px">
-							<li><b>Custos mais baixos</b> - A computação sem servidor geralmente é muito econômica, pois os
+							<li><b>Custos mais baixos</b> - A computação sem servidor geralmente é muito econômica, pois
+								os
 								provedores tradicionais de serviços de back-end em nuvem (alocação de servidor)
 								geralmente fazem com que o usuário pague por espaço não utilizado ou tempo de CPU
 								ocioso.</li>
-							<li><b>Escalabilidade simplificada</b> - Os desenvolvedores que usam arquitetura sem servidor não
+							<li><b>Escalabilidade simplificada</b> - Os desenvolvedores que usam arquitetura sem
+								servidor não
 								precisam se preocupar com políticas para escalar seu código. O fornecedor sem servidor
 								lida com todo o dimensionamento sob demanda.</li>
-							<li><b>Código de back-end simplificado</b> - Com o FaaS, os desenvolvedores podem criar funções
+							<li><b>Código de back-end simplificado</b> - Com o FaaS, os desenvolvedores podem criar
+								funções
 								simples que executam de forma independente uma única finalidade, como fazer uma chamada
 								de API.</li>
-							<li><b>Resposta mais rápida</b> - A arquitetura sem servidor pode reduzir significativamente o
+							<li><b>Resposta mais rápida</b> - A arquitetura sem servidor pode reduzir significativamente
+								o
 								tempo de lançamento no mercado. Em vez de precisar de um processo de implantação
 								complicado para lançar correções de bugs e novos recursos, os desenvolvedores podem
 								adicionar e modificar o código aos poucos.</li>
@@ -128,7 +133,7 @@
 					</span></p>
 				<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
 			</section>
-			
+
 			<section>
 				<section>
 					<h5>Functions-as-a-Service (FaaS) <br /> (serverless function)</h5>
@@ -167,28 +172,40 @@
 				<section>
 					<h5>Então vamos utilizar um dynamodb, uma funcao lambda e uma ApiGateway</h5>
 					<p><span style="font-size:24px">
-						mas antes..
+							mas antes..
 						</span></p>
 					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
 				</section>
 				<section>
 					<h5>Gateway de API</h5>
 					<p><span style="font-size:24px">
-						Um serviço totalmente gerenciado que faz com que os desenvolvedores criem, publiquem, mantenham, monitorem e protejam APIs facilmente em qualquer escala. O API Gateway pode ser usado para criar APIs Restful e APIs WebSocket que possuem aplicativos de comunicação bidirecional em tempo real. É uma porta de entrada para aplicativos acessarem dados, lógica de negócios ou funcionalidade de seus serviços de back-end.
+							Um serviço totalmente gerenciado que faz com que os desenvolvedores criem, publiquem,
+							mantenham, monitorem e protejam APIs facilmente em qualquer escala. O API Gateway pode ser
+							usado para criar APIs Restful e APIs WebSocket que possuem aplicativos de comunicação
+							bidirecional em tempo real. É uma porta de entrada para aplicativos acessarem dados, lógica
+							de negócios ou funcionalidade de seus serviços de back-end.
 						</span></p>
 					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
 				</section>
 				<section>
 					<h5>AWS Lambda</h5>
 					<p><span style="font-size:24px">
-						Um serviço de computação sem servidor que executa código como resposta a eventos e cuida automaticamente dos recursos inferiores. Ele executa código em infraestrutura de computação de alta disponibilidade e realiza toda a administração dos recursos de computação. Alguns exemplos são solicitações HTTP via Amazon API Gateway, alterações em objetos no S3 e muitos outros.
+							Um serviço de computação sem servidor que executa código como resposta a eventos e cuida
+							automaticamente dos recursos inferiores. Ele executa código em infraestrutura de computação
+							de alta disponibilidade e realiza toda a administração dos recursos de computação. Alguns
+							exemplos são solicitações HTTP via Amazon API Gateway, alterações em objetos no S3 e muitos
+							outros.
 						</span></p>
 					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
 				</section>
 				<section>
 					<h5>DynamoDB</h5>
 					<p><span style="font-size:24px">
-						Um banco de dados do Amazon AWS Web Services que é totalmente gerenciado, sem servidor, banco de dados NoSQL de valor-chave, possui aplicativos de alto desempenho em qualquer escala. Possui os seguintes benefícios, como segurança integrada, backups contínuos, replicação multirregional automatizada, armazenamento em cache na memória e ferramentas de exportação de dados.
+							Um banco de dados do Amazon AWS Web Services que é totalmente gerenciado, sem servidor,
+							banco de dados NoSQL de valor-chave, possui aplicativos de alto desempenho em qualquer
+							escala. Possui os seguintes benefícios, como segurança integrada, backups contínuos,
+							replicação multirregional automatizada, armazenamento em cache na memória e ferramentas de
+							exportação de dados.
 						</span></p>
 					<!--img data-src="img/jetbrains_logo.png" width="250" height="250"-->
 				</section>
@@ -197,7 +214,7 @@
 			<section>
 				<h5>Temos uma missão?</h5>
 				<p><span style="font-size:24px">
-					Temos uma demanda de criar um aplicativo para cadastro de endereços:
+						Temos uma demanda de criar um aplicativo para cadastro de endereços:
 					</span></p>
 				<img data-src="img/apigw-lambda-dynamodb.png" width="800" height="300">
 			</section>
@@ -205,11 +222,12 @@
 			<section>
 				<h5>Exemplo:</h5>
 				<p><span style="font-size:24px">
-					Vamos seguir esse exemplo:
+						Vamos seguir esse exemplo:
 					</span></p>
-					<a href="https://catalog.us-east-1.prod.workshops.aws/workshops/2c8321cb-812c-45a9-927d-206eea3a500f/en-US" target="_blank">Workshop</a>
+				<a href="https://catalog.us-east-1.prod.workshops.aws/workshops/2c8321cb-812c-45a9-927d-206eea3a500f/en-US"
+					target="_blank">Workshop</a>
 			</section>
-			
+
 			<section>
 				<h5>O que é AWS CloudFormation?</h5>
 				<p><span style="font-size:24px">
@@ -680,15 +698,21 @@ Outputs:
 			<section>
 				<h5>Demo:</h5>
 				<p><span style="font-size:24px">
-					Vamos seguir a demo:
+						Vamos seguir a demo:
 					</span></p>
-					<img data-src="img/demo.jpg" width="250" header="100" /><br />
-					<a href="https://github.com/rogeriofontes/handson-apigw-lambda-dynamodb" target="_blank">Link</a>
+				<img data-src="img/demo.jpg" width="250" header="100" /><br />
+				<a href="https://github.com/rogeriofontes/handson-apigw-lambda-dynamodb" target="_blank">Link</a>
 			</section>
 
 			<!--section>
 				<img data-src="img/tobecontinued.jfif" width="250" header="200">
 			</section-->
+			<section>
+				<h5>Desafio Data entrega dia 10/12/2022:</h5>
+				<p><span style="font-size:24px">
+					<img data-src="img/arquitetura_basica_aws.png" width="250" header="200">
+				</span></p>
+			</section>
 
 			<section>
 				<img data-src="img/thanks.jpg" width="250" header="200">
@@ -705,15 +729,22 @@ Outputs:
 
 					<a href="https://medium.com/@edjgeek/meet-aws-sam-cli-sam-init-bab68b4cc0d4"
 						target="_blank">https://medium.com/@edjgeek/meet-aws-sam-cli-sam-init-bab68b4cc0d4</a><br />
-					<a
-						href="https://anto.online/code/aws-sam-introductory-tutorial/">https://anto.online/code/aws-sam-introductory-tutorial/</a>
+					<a href="https://anto.online/code/aws-sam-introductory-tutorial/"
+						target="_blank">https://anto.online/code/aws-sam-introductory-tutorial/</a>
+					<a href="https://dashbird.io/blog/business-benefits-of-serverless/"
+						target="_blank">https://dashbird.io/blog/business-benefits-of-serverless/</a>
+					<a href="https://sst.dev/chapters/pt/what-is-serverless.html"
+						target="_blank">https://sst.dev/chapters/pt/what-is-serverless.html</a>
+					<a href="https://docs.aws.amazon.com/pt_br/apigateway/latest/developerguide/http-api-dynamo-db.html"
+						target="_blank">https://docs.aws.amazon.com/pt_br/apigateway/latest/developerguide/http-api-dynamo-db.html</a>
+					<a href="https://faun.pub/build-a-rest-api-with-api-gateway-aws-lambda-dynamodb-aws-cdk-616d1e17c128"
+						target="_blank">https://faun.pub/build-a-rest-api-with-api-gateway-aws-lambda-dynamodb-aws-cdk-616d1e17c128</a>
+					<a href="https://cloudonaut.io/create-a-serverless-restful-api-with-api-gateway-cloudformation-lambda-and-dynamodb/"
+						target="_blank">https://cloudonaut.io/create-a-serverless-restful-api-with-api-gateway-cloudformation-lambda-and-dynamodb/</a>
+					<a href="https://dev.classmethod.jp/articles/creating-an-shop-api-of-get-items-with-dynamodb-lambda-and-api-gateway-using-aws/"
+						target="_blank">https://dev.classmethod.jp/articles/creating-an-shop-api-of-get-items-with-dynamodb-lambda-and-api-gateway-using-aws/</a>
+
 				</span>
-				https://dashbird.io/blog/business-benefits-of-serverless/
-				https://sst.dev/chapters/pt/what-is-serverless.html
-				https://docs.aws.amazon.com/pt_br/apigateway/latest/developerguide/http-api-dynamo-db.html
-				https://faun.pub/build-a-rest-api-with-api-gateway-aws-lambda-dynamodb-aws-cdk-616d1e17c128
-				https://cloudonaut.io/create-a-serverless-restful-api-with-api-gateway-cloudformation-lambda-and-dynamodb/
-				https://dev.classmethod.jp/articles/creating-an-shop-api-of-get-items-with-dynamodb-lambda-and-api-gateway-using-aws/
 			</section>
 		</div>
 
