--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
 			<section>
-				<h3>Api com Serverles</h3>
+				<h3>Api com Serverless</h3>
 				<img data-src="img/sam.png">
 				<h4>HandsON</h4>
 				<p>
